[#24] Lots of updates including auto-refreshing game list
