# src/app/api/services/test-controller.service.ts
@@ -70,23 +70,25 @@ export class TestControllerService extends BaseService {
   }
 
   /**
-   * Path part for operation test006
+   * Path part for operation test005
    */
-  static readonly Test006Path = '/test/test/gameDoc';
+  static readonly Test005Path = '/test/sse/test03/{userID}';
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `test006()` instead.
+   * To access only the response body, use `test005()` instead.
    *
    * This method doesn't expect any request body.
    */
-  test006$Response(params?: {
+  test005$Response(params: {
+    userID: string;
 
-  }): Observable<StrictHttpResponse<GameDocument>> {
+  }): Observable<StrictHttpResponse<{  }>> {
 
-    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test006Path, 'get');
+    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test005Path, 'get');
     if (params) {
 
+      rb.path('userID', params.userID);
 
     }
     return this.http.request(rb.build({
@@ -95,72 +97,24 @@ export class TestControllerService extends BaseService {
     })).pipe(
       filter((r: any) => r instanceof HttpResponse),
       map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<GameDocument>;
+        return r as StrictHttpResponse<{  }>;
       })
     );
   }
 
   /**
    * This method provides access to only to the response body.
-   * To access the full response (for headers, for example), `test006$Response()` instead.
+   * To access the full response (for headers, for example), `test005$Response()` instead.
    *
    * This method doesn't expect any request body.
    */
-  test006(params?: {
+  test005(params: {
+    userID: string;
 
-  }): Observable<GameDocument> {
+  }): Observable<{  }> {
 
-    return this.test006$Response(params).pipe(
-      map((r: StrictHttpResponse<GameDocument>) => r.body as GameDocument)
-    );
-  }
-
-  /**
-   * Path part for operation test003
-   */
-  static readonly Test003Path = '/test/sse/test01/{x}';
-
-  /**
-   * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `test003()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  test003$Response(params: {
-    'x': string;
-
-  }): Observable<StrictHttpResponse<SseEmitter>> {
-
-    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test003Path, 'get');
-    if (params) {
-
-      rb.path('x', params['x']);
-
-    }
-    return this.http.request(rb.build({
-      responseType: 'blob',
-      accept: '*/*'
-    })).pipe(
-      filter((r: any) => r instanceof HttpResponse),
-      map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<SseEmitter>;
-      })
-    );
-  }
-
-  /**
-   * This method provides access to only to the response body.
-   * To access the full response (for headers, for example), `test003$Response()` instead.
-   *
-   * This method doesn't expect any request body.
-   */
-  test003(params: {
-    'x': string;
-
-  }): Observable<SseEmitter> {
-
-    return this.test003$Response(params).pipe(
-      map((r: StrictHttpResponse<SseEmitter>) => r.body as SseEmitter)
+    return this.test005$Response(params).pipe(
+      map((r: StrictHttpResponse<{  }>) => r.body as {  })
     );
   }
 
@@ -217,6 +171,52 @@ export class TestControllerService extends BaseService {
   }
 
   /**
+   * Path part for operation test006
+   */
+  static readonly Test006Path = '/test/test/gameDoc';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `test006()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  test006$Response(params?: {
+
+  }): Observable<StrictHttpResponse<GameDocument>> {
+
+    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test006Path, 'get');
+    if (params) {
+
+
+    }
+    return this.http.request(rb.build({
+      responseType: 'blob',
+      accept: '*/*'
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<GameDocument>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access to only to the response body.
+   * To access the full response (for headers, for example), `test006$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  test006(params?: {
+
+  }): Observable<GameDocument> {
+
+    return this.test006$Response(params).pipe(
+      map((r: StrictHttpResponse<GameDocument>) => r.body as GameDocument)
+    );
+  }
+
+  /**
    * Path part for operation test002
    */
   static readonly Test002Path = '/test/get';
@@ -263,25 +263,25 @@ export class TestControllerService extends BaseService {
   }
 
   /**
-   * Path part for operation test005
+   * Path part for operation test003
    */
-  static readonly Test005Path = '/test/sse/test03/{userID}';
+  static readonly Test003Path = '/test/sse/test01/{x}';
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `test005()` instead.
+   * To access only the response body, use `test003()` instead.
    *
    * This method doesn't expect any request body.
    */
-  test005$Response(params: {
-    userID: string;
+  test003$Response(params: {
+    'x': string;
 
-  }): Observable<StrictHttpResponse<{  }>> {
+  }): Observable<StrictHttpResponse<SseEmitter>> {
 
-    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test005Path, 'get');
+    const rb = new RequestBuilder(this.rootUrl, TestControllerService.Test003Path, 'get');
     if (params) {
 
-      rb.path('userID', params.userID);
+      rb.path('x', params['x']);
 
     }
     return this.http.request(rb.build({
@@ -290,24 +290,24 @@ export class TestControllerService extends BaseService {
     })).pipe(
       filter((r: any) => r instanceof HttpResponse),
       map((r: HttpResponse<any>) => {
-        return r as StrictHttpResponse<{  }>;
+        return r as StrictHttpResponse<SseEmitter>;
       })
     );
   }
 
   /**
    * This method provides access to only to the response body.
-   * To access the full response (for headers, for example), `test005$Response()` instead.
+   * To access the full response (for headers, for example), `test003$Response()` instead.
    *
    * This method doesn't expect any request body.
    */
-  test005(params: {
-    userID: string;
+  test003(params: {
+    'x': string;
 
-  }): Observable<{  }> {
+  }): Observable<SseEmitter> {
 
-    return this.test005$Response(params).pipe(
-      map((r: StrictHttpResponse<{  }>) => r.body as {  })
+    return this.test003$Response(params).pipe(
+      map((r: StrictHttpResponse<SseEmitter>) => r.body as SseEmitter)
     );
   }
 
